# traffix-display

./: .gitignore  .gitmodules  CMakeLists.txt  sdkconfig.defaults
components/gdl90/: CMakeLists.txt  gdl90.c  riemann.c
components/gdl90/include/: gdl90.h
components/gdl90/test/: CMakelists.txt  gdl90test.c  tests.c  tests.h
main/: CMakeLists.txt  Kconfig  events.c  events.h  flarm.c  flarm.h  gdltask.c  gdltask.h  idf_component.yml  lv_conf.h  main.c  main.h  main_display.c  main_display.h  ownship.c  ownship.h  preferences.c  preferences.h  splash.c  status.c  status.h  traffic.c  traffic.h  udp.c  ui.c  ui.h  units.c  units.h  wifi_prov.c  wifi_prov.h
main/images/: gps_icon.c  north.c  ownship.c  target.c  target_filled.c  traffic_icon.c  traffix_logo.c  ue_text.c  wifi_icon.c
resources/: createTargets  filelist.c  gps.afdesign  north.afdesign  ownship.afdesign  target.afdesign  traffic_icon.afdesign  traffix-icon.afdesign  traffix-logo.afdesign  wifi_icon.afdesign
